fixed spacing error with empty tiles

--- a/src/components/boards/Board.css
+++ b/src/components/boards/Board.css
@@ -6,3 +6,7 @@
     height: 100px;
     vertical-align: top;
 }
+
+div {
+    vertical-align: top;
+}
